--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       Only files inside the `public` folder can be referenced from the HTML.
     -->
 
-    <title>Nano_Twitter</title>
+    <title>Nano Twitter</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
